qa/lint/cppcheck.log
Sun Oct  5 02:41:56 PM +07 2025
Checking ../../src/main.cpp ...
../../src/main.cpp:0:0: information: Limiting analysis of branches. Use --check-level=exhaustive to analyze all branches. [normalCheckLevelMaxBranches]

^
../../src/expr_any.hpp:139:38: error: Reference to temporary returned. [returnTempReference]
                return itm.identifier();
                                     ^
../../src/type.hpp:61:35: style: Consider using std::find_if algorithm instead of a raw loop. [useStlAlgorithm]
            if (fld.name == name) {
                                  ^
../../src/toc.hpp:195:19: style: Consider using std::transform algorithm instead of a raw loop. [useStlAlgorithm]
            path_.emplace_back(part.begin(), part.end());
                  ^
../../src/toc.hpp:658:32: style: Consider using std::find_if algorithm instead of a raw loop. [useStlAlgorithm]
            if (frm.is_func()) {
                               ^
../../src/toc.hpp:671:32: style: Consider using std::find_if algorithm instead of a raw loop. [useStlAlgorithm]
            if (frm.is_func()) {
                               ^
../../src/toc.hpp:683:32: style: Consider using std::find_if algorithm instead of a raw loop. [useStlAlgorithm]
            if (frm.is_func()) {
                               ^
../../src/toc.hpp:1326:20: style: Consider using std::accumulate algorithm instead of a raw loop. [useStlAlgorithm]
            nbytes += frm.allocated_stack_size();
                   ^
../../src/lut.hpp:44:32: style: Consider using std::find_if algorithm instead of a raw loop. [useStlAlgorithm]
            if (e.is_key(key)) {
                               ^
../../src/lut.hpp:54:32: style: Consider using std::find_if algorithm instead of a raw loop. [useStlAlgorithm]
            if (e.is_key(key)) {
                               ^
nofile:0:0: information: Active checkers: 169/966 (use --checkers-report=<filename> to see details) [checkersReport]

